# Azure-devops-mcp-python

./: CONVERSION.md  LICENSE  PAT_AUTHENTICATION_SUMMARY.md  README.md  azure-webapp-config-example.md  diagnostic_server.py  direct_mcp_server.py  minimal_test.py  pyproject.toml  requirements.txt  robust_mcp_server.py  setup.py  simple_server.py  test_pat_auth.py
.github/workflows/: main_devops-mcp-server.yml
azure_devops_mcp/: __init__.py  __main__.py  auth.py  main.py  org_tenants.py  useragent.py
azure_devops_mcp/shared/: __init__.py  domains.py
azure_devops_mcp/tools/: __init__.py  advanced_security.py  core.py  pipelines.py  repositories.py  search.py  test_plans.py  wiki.py  work.py  work_items.py
deploy/: AZURE_DEPLOYMENT_GUIDE.md  TESTING_GUIDE.md  deploy_to_azure.sh  package.json  requirements.txt  simple_startup.py  startup.cmd  startup.py  startup.sh  test_azure_webapp.py
docs/: HTTP_CONFIGURATION.md
examples/: http_server_example.py
tests/: test_basic.py
